--- a/output.css
+++ b/output.css
@@ -1017,6 +1017,14 @@ select {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -1204,6 +1212,11 @@ select {
   padding-bottom: 6rem;
 }
 
+.px-48 {
+  padding-left: 12rem;
+  padding-right: 12rem;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1226,6 +1239,10 @@ select {
 
 .pr-16 {
   padding-right: 4rem;
+}
+
+.pl-8 {
+  padding-left: 2rem;
 }
 
 .text-center {
@@ -1611,6 +1628,11 @@ select {
 
   .md\:overflow-x-hidden {
     overflow-x: hidden;
+  }
+
+  .md\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
 }
 
